--- a/docs/Формула_распределения_к_старшему_узлу.ipynb
+++ b/docs/Формула_распределения_к_старшему_узлу.ipynb
@@ -1,22 +1,32 @@
-```json
 {
  "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Формула распределения\n",
-    "\n",
-    "## Основное уравнение\n",
-    "\n",
-    "$$ \n",
-    "Q = \\sum_{i=1}^{N} W_i \\cdot \\mathrm{In}(i) \n",
-    "$$\n",
-    "\n",
-    "## AMPL код\n",
-    "\n",
-    "```ampl\n",
-    "Q = sum{i in Drones} (W[i] * In[i])\n",
+    "# Формула распределения данных к старшему узлу (королеве)",
+    "",
+    "## Основное уравнение",
+    "",
+    "$$",
+    "Q = \\sum_{i=1}^{N} W_i \\cdot \\mathrm{In}(i)",
+    "$$",
+    "",
+    "где:",
+    "- $N$ — количество дронов",
+    "- $\\mathrm{In}(i)$ — входные данные дрона $i$",
+    "- $W_i$ — вес дрона $i$",
+    "- $Q$ — данные королевы",
+    "",
+    "## AMPL реализация",
+    "",
+    "```ampl",
+    "set Drones;",
+    "param In {i in Drones};",
+    "param W {i in Drones};",
+    "var Q;",
+    "subject to Queen_Input: Q = sum{i in Drones} (W[i] * In[i]);",
+    "display Q;",
     "```"
    ]
   }
