--- a/docs/Формула_распределения_к_старшему_узлу.ipynb
+++ b/docs/Формула_распределения_к_старшему_узлу.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Формула распределения данных к старшему узлу (королеве)",
     "",
-    "## Основное уравнение",
+    "## Основное уравнение ",
     "",
     "$$",
     "Q = \\sum_{i=1}^{N} W_i \\cdot \\mathrm{In}(i)",
@@ -14,7 +14,7 @@
     "",
     "где:",
     "- $N$ — количество дронов",
-    "- $\\mathrm{In}(i)$ — входные данные дрона $i$",
+    "- $\\mathrm{In}(i)$ — входные данные дрона на Kn датчик $i$",
     "- $W_i$ — вес дрона $i$",
     "- $Q$ — данные королевы",
     "",
