--- a/docs/Формула_распределения_к_старшему_узлу.ipynb
+++ b/docs/Формула_распределения_к_старшему_узлу.ipynb
@@ -4,30 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Формула распределения данных к старшему узлу (королеве)",
+    "# Формула распределения сигнала в рое дронов с учётом удалённости",
     "",
-    "## Основное уравнение ",
+    "## Основное уравнение с задержкой",
     "",
     "$$",
-    "Q = \\sum_{i=1}^{N} W_i \\cdot \\mathrm{In}(i)",
+    "Q(t) = \\sum_{i=1}^{N} \\left[ \\frac{W_i \\cdot In_i(t - \\tau_i)}{d_i^{\\alpha}} \\right]",
     "$$",
     "",
     "где:",
-    "- $N$ — количество дронов",
-    "- $\\mathrm{In}(i)$ — входные данные дрона на Kn датчик $i$",
-    "- $W_i$ — вес дрона $i$",
-    "- $Q$ — данные королевы",
+    "- $\\tau_i = \\dfrac{d_i}{v}$ — задержка распространения",
+    "- $d_i$ — расстояние от дрона $i$ до королевы",
+    "- $v$ — скорость сигнала (например, скорость света)",
+    "- $\\alpha$ — коэффициент затухания ($\\alpha = 2$ для свободного пространства)",
     "",
-    "## AMPL реализация",
+    "## AMPL модель с распространением",
     "",
     "```ampl",
     "set Drones;",
-    "param In {i in Drones};",
-    "param W {i in Drones};",
-    "var Q;",
-    "subject to Queen_Input: Q = sum{i in Drones} (W[i] * In[i]);",
-    "display Q;",
-    "```"
+    "set Time;",
+    "",
+    "param In {i in Drones, t in Time};  # Входной сигнал",
+    "param d {i in Drones};              # Расстояния",
+    "param v;                            # Скорость сигнала",
+    "param alpha default 2;              # Затухание",
+    "",
+    "var Q {t in Time};                  # Сигнал королевы",
+    "",
+    "# Задержка в тактах",
+    "param dt;                           # Длительность такта",
+    "param tau {i in Drones} = ceil(d[i] / v / dt);",
+    "",
+    "subject to Signal_Propagation {t in Time: t >= max{i in Drones} tau[i]}:",
+    "    Q[t] = sum{i in Drones} (W[i] * In[i, t - tau[i]] / (d[i]^alpha));",
+    "```",
+    "",
+    "## Пример для 3 дронов",
+    "",
+    "Пусть:",
+    "- $v = 3 \\times 10^8$ м/с (скорость света)",
+    "- $d = [100, 200, 300]$ м",
+    "- $\\alpha = 2$",
+    "",
+    "Тогда задержки:",
+    "$$",
+    "\\tau_1 = \\frac{100}{3 \\times 10^8} = 0.33\\ \\mu\\text{s}",
+    "$$"
    ]
   }
  ],
