--- a/docs/Формула_распределения_к_старшему_узлу.ipynb
+++ b/docs/Формула_распределения_к_старшему_узлу.ipynb
@@ -18,8 +18,7 @@
     "- $v$ — скорость сигнала (например, скорость света)",
     "- $\\alpha$ — коэффициент затухания ($\\alpha = 2$ для свободного пространства)",
     "",
-    "
-    ## AMPL модель с распространением",
+    "## AMPL модель с распространением",
     "",
     "```ampl",
     "set Drones;",
